Add IdString printer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,19 @@
 cmake_minimum_required(VERSION 3.15)
-project(min_hdl_netlist CXX)
+project(
+    min_hdl_netlist
+    VERSION 0.1.0
+    DESCRIPTION "Test repository for project utilities"
+    HOMEPAGE_URL ""
+    LANGUAGES C CXX)
+
+include(cmake/project-is-top-level.cmake)
+include(cmake/variables.cmake)
+include(cmake/options.cmake)
+
+include(cmake/find-3rdparty.cmake)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
@@ -23,15 +32,6 @@ add_executable(hdl_demo
     src/demo/main.cpp
 )
 target_link_libraries(hdl_demo PRIVATE hdl)
-
-# ---- GoogleTest for unit tests ----
-include(FetchContent)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
-)
-FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 add_executable(hdl_tests
