Update tcl console auto-completion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(
 include(cmake/project-is-top-level.cmake)
 include(cmake/variables.cmake)
 include(cmake/options.cmake)
-
+include(cmake/stamp_build.cmake)
 include(cmake/find-3rdparty.cmake)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -56,12 +56,21 @@ set(CMD_SOURCES
     src/tcl/cmd/cmd_undo.cpp)
 add_executable(hdl_tcl src/demo/tcl_console_main.cpp src/tcl/console.cpp
                        ${CMD_SOURCES})
-# if(HDL_USE_READLINE AND Readline_FOUND)
+
+# Automatically include user-defined commands, if any
+file(GLOB USER_CMD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/tcl/cmd/user/*.cpp)
+target_sources(hdl_tcl PRIVATE ${USER_CMD_SOURCES})
+
+# Optional GNU Readline support (only if requested and found)
+if(HDL_USE_READLINE
+   AND READLINE_LIBRARY
+   AND READLINE_INCLUDE_DIR)
   target_compile_definitions(hdl_tcl PRIVATE HDL_HAVE_READLINE=1)
-#   target_link_libraries(hdl_tcl PRIVATE Readline::Readline)
   target_include_directories(hdl_tcl PRIVATE ${READLINE_INCLUDE_DIR})
   target_link_libraries(hdl_tcl PRIVATE ${READLINE_LIBRARY})
-# endif()
+else()
+  message(STATUS "Readline disabled or not found; building hdl_tcl without it")
+endif()
 target_include_directories(hdl_tcl PRIVATE ${TCL_INCLUDE_PATH}
                                            ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(hdl_tcl PRIVATE hdl ${TCL_LIBRARY})
